--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,11 +47,16 @@ stages:
       inputs:
         versionSpec: '3.11'
 
-    # --- 2. Instalar dependencias ---
+       # --- 2. Instalar dependencias (Separado para aislar errores) ---
     - script: |
         pip install -r requirements.txt
+      displayName: 'Instalar dependencias del proyecto (Flask, SQLAlchemy, etc.)'
+
+    # --- 2b. Instalar herramientas de CI/CD ---
+    - script: |
         pip install pytest requests # Instalar 'requests' para la prueba funcional post-deploy
-      displayName: 'Instalar Flask y dependencias (incl. pytest y requests)'
+      displayName: 'Instalar herramientas de Pruebas (pytest y requests)'
+
 
     # --- 3. Ejecutar pruebas unitarias (Actividad 14: Logs) ---
     - script: |
